--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>dd-vault-metadata-api</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
-    <name>Dd Vault Metadata Api</name>
+    <name>DD Vault Metadata Api</name>
     <url>https://github.com/DANS-KNAW/dd-vault-metadata-api</url>
     <description>Service that sets or updates the Data Data Vault Metadata</description>
     <inceptionYear>2024</inceptionYear>
